--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -63,7 +63,7 @@ body {
     -ms-flex-negative: 0;
     flex-shrink: 0;
     width: 100%;
-    min-height: 100vh;
+    max-height: 100%;
     overflow: hidden;
     margin: auto;
 }
