--- a/assets/scss/page/_banner.scss
+++ b/assets/scss/page/_banner.scss
@@ -1,6 +1,6 @@
 .banner {
     min-height: 700px;
-    background-image: linear-gradient(to bottom, rgba(228, 126, 125, 0.92), rgba(236, 211, 133, 0.92)), url('assets/img/banner6.png');
+    background-image: linear-gradient(to bottom, rgba(228, 126, 125, 0.92), rgba(236, 211, 133, 0.92)), url('../img/banner6.png');
     background-size: cover;
     font-family: 'Montserrat', sans-serif;
     background-repeat: no-repeat;
