--- a/assets/scss/page/top/_about-us.scss
+++ b/assets/scss/page/top/_about-us.scss
@@ -56,21 +56,21 @@
             }
         }
         .about-us-01 {
-            background-image: url("/assets/img/about-us1.png");
+            background-image: url("../img/about-us1.png");
             &:hover {
-                background-image: linear-gradient(to bottom, rgba(228, 126, 125, 0.92), rgba(236, 211, 133, 0.92)), url('/assets/img/about-us1.png');
+                background-image: linear-gradient(to bottom, rgba(228, 126, 125, 0.92), rgba(236, 211, 133, 0.92)), url('../img/about-us1.png');
             }
         }
         .about-us-02 {
-            background-image: url("/assets/img/about-us2.png");
+            background-image: url("../img/about-us2.png");
             &:hover {
-                background-image: linear-gradient(to bottom, rgba(228, 126, 125, 0.92), rgba(236, 211, 133, 0.92)), url('/assets/img/about-us2.png');
+                background-image: linear-gradient(to bottom, rgba(228, 126, 125, 0.92), rgba(236, 211, 133, 0.92)), url('../img/about-us2.png');
             }
         }
         .about-us-03 {
-            background-image: url("/assets/img/about-us3.png");
+            background-image: url("../img/about-us3.png");
             &:hover {
-                background-image: linear-gradient(to bottom, rgba(228, 126, 125, 0.92), rgba(236, 211, 133, 0.92)), url('/assets/img/about-us3.png');
+                background-image: linear-gradient(to bottom, rgba(228, 126, 125, 0.92), rgba(236, 211, 133, 0.92)), url('../img/about-us3.png');
             }
         }
         .about-us-01:hover,
