--- a/assets/scss/page/top/_count.scss
+++ b/assets/scss/page/top/_count.scss
@@ -6,6 +6,12 @@
     position: relative;
     color: white;
     background-color: #95E1D3;
+    @media #{$res800} {
+        height: 200px;
+    }
+    @media #{$res370} {
+        height: 100px;
+    }
     cursor: context-menu;
     .count__content {
         max-width: 1200px;
@@ -18,6 +24,12 @@
         max-width: 240px;
         width: 100%;
         padding: 80px 0 0 0;
+        @media #{$res800} {
+            padding: 60px 0 0 0;
+        }
+        @media #{$res370} {
+            padding: 20px 0 0 0;
+        }
     }
     .count--border:not(:last-child) {
         border-right: 1px solid #B5EAE0;
@@ -31,6 +43,7 @@
         }
         @media #{$res370} {
             font-size: 20px;
+            padding-bottom: 5px;
         }
     }
     span {
