--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -179,6 +179,7 @@
                         width: 120px;
                         height: 80px;
                         margin-right: 20px;
+                        cursor: pointer;
                         @media #{$res370} {
                             margin-right: 0;
                         }
@@ -186,6 +187,12 @@
                     ul li {
                         display: flex;
                         padding-bottom: 30px;
+                        &:hover {
+                            a {
+                                color: #FCE38A;
+                                transition: 0.4s;
+                            }
+                        }
                         @media #{$res1200} {
                             padding-bottom: 25px;
                         }
@@ -211,24 +218,16 @@
                     }
                 }
                 .footer__content__ins {
-                    @media #{$res1200} {
-                        max-width: calc(100%/3.5);
-                    }
-                    @media #{$res1000} {
-                        max-width: 90%;
-                        margin: 20px auto;
-                        padding: 0 20px 20px 20px;
-                    }
-                    @media #{$res800} {
-                        padding: 20px;
-                    }
                     max-width: 280px;
-                    @media #{$res370} {
-                        min-height: 360px;
-                    }
                     img {
                         width: 90px;
                         height: 90px;
+                        transition: 0.4s;
+                        cursor: pointer;
+                        &:hover {
+                            transform: scale(1.05);
+                            transition: 0.4s;
+                        }
                     }
                     a {
                         font-size: 13px;
@@ -240,15 +239,25 @@
                         display: flex;
                         flex-wrap: wrap;
                     }
+                    @media #{$res1200} {
+                        max-width: calc(100%/3.5);
+                    }
+                    @media #{$res1000} {
+                        max-width: 90%;
+                        margin: 20px auto;
+                        padding: 0 20px 20px 20px;
+                    }
+                    @media #{$res800} {
+                        padding: 20px;
+                    }
+                    @media #{$res370} {
+                        min-height: 360px;
+                    }
                 }
                 .footer__content__blog,
                 .footer__content__ins {
                     a {
                         transition: 0.4s;
-                        &:hover {
-                            color: #FCE38A;
-                            transition: 0.4s;
-                        }
                     }
                 }
             }
