--- a/assets/scss/page/_banner.scss
+++ b/assets/scss/page/_banner.scss
@@ -1,12 +1,11 @@
 .banner {
     min-height: 700px;
     background-image: linear-gradient(to bottom, rgba(228, 126, 125, 0.92), rgba(236, 211, 133, 0.92)), url('../img/banner6.png');
-    background-size: cover;
     font-family: 'Montserrat', sans-serif;
+    background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
     padding-top: 80px;
-    background-size: cover;
-    background-repeat: round;
     .banner__content {
         color: #fff;
         .banner__content__top {
@@ -75,19 +74,26 @@
                     position: relative;
                     line-height: 3;
                     color: #f7eac5;
+                    transition: 0.4s;
+                    &::after {
+                        content: "";
+                        position: absolute;
+                        top: 0;
+                        width: 0%;
+                        height: 2px;
+                        border-top: 2px solid #db5f5f;
+                        left: 0;
+                        z-index: 2;
+                        transition: 0.4s;
+                    }
                     &:hover {
                         &::before {
                             color: white;
+                            transition: 0.4s;
                         }
                         &::after {
-                            content: "";
-                            position: absolute;
-                            top: 0;
                             width: 35%;
-                            height: 2px;
-                            border-top: 2px solid #db5f5f;
-                            left: 0;
-                            z-index: 2;
+                            transition: 0.4s;
                         }
                     }
                     &::before {
@@ -103,8 +109,10 @@
                     a {
                         color: #f7eac5;
                         font-size: 12px;
+                        transition: 0.4s;
                         &:hover {
                             color: white;
+                            transition: 0.4s;
                         }
                         span {
                             font-weight: bold;
